--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,8 +15,10 @@ services:
 
   app:
     build: .
+    environment:
+      - DATADOG_TRACE_DEBUG=true
     ports:
-      - "5000:5000"
+      - "80:80"
     networks:
       - agent-network
 
